# xiaomi_airpurifier_ng

./: .gitignore  .mcp.json  CHANGELOG.md  README.md  README_RU.md  hacs.json  pyproject.toml  requirements_test.txt
.github/workflows/: lint.yml  release.yml  tests.yml  validate.yml
custom_components/: __init__.py
custom_components/xiaomi_miio_airpurifier_ng/: __init__.py  binary_sensor.py  button.py  climate.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  fan.py  humidifier.py  manifest.json  number.py  quality_scale.yaml  select.py  sensor.py  service_mixin.py  services.yaml  strings.json  switch.py
custom_components/xiaomi_miio_airpurifier_ng/climates/: __init__.py  dehumidifier.py
custom_components/xiaomi_miio_airpurifier_ng/fans/: __init__.py  air_fresh.py  base.py  humidifier.py  purifier.py  standing.py
custom_components/xiaomi_miio_airpurifier_ng/translations/: cs.json  de.json  en.json  es.json  fr.json  it.json  nl.json  pl.json  pt-BR.json  ru.json  sv.json  tr.json  uk.json  zh-Hans.json
docs/: ARCHITECTURE_ANALYSIS.md  RESEARCH.md
tests/: __init__.py  conftest.py  test_binary_sensor.py  test_button.py  test_classify_model.py  test_climate_dehumidifier.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_entity.py  test_fan_air_fresh.py  test_fan_base.py  test_fan_humidifier.py  test_fan_purifier.py  test_fan_standing.py  test_humidifier.py  test_init.py  test_number.py  test_select.py  test_service_mixin.py  test_switch.py
