[project]
name = "xiaomi-miio-airpurifier-ng"
version = "3.0.0-alpha.12"
description = "Xiaomi Air Purifier NG - Home Assistant Custom Integration"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM102", # collapsible-if — readability preference
]

[tool.ruff.lint.isort]
known-first-party = ["custom_components.xiaomi_miio_airpurifier_ng"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]
